# netguard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  config.py  database.py  init.sql  main.py  pyproject.toml  worker.py
backend/models/: __init__.py  alerts.py  ml_metrics.py  packets.py  threat_actors.py
backend/routers/: __init__.py  alerts.py  geo.py  metrics.py  packets.py  threat_actors.py  websocket.py
backend/schemas/: __init__.py  alerts.py  metrics.py  packets.py  threat_actors.py
backend/services/: __init__.py  alert_service.py  metrics_service.py  packet_service.py  threat_actor_service.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertTimeline.tsx  GeoMap.tsx  MetricsGrid.tsx  NetworkMap.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AlertsPage.tsx  MLInsightsPage.tsx  MapPage.tsx
ml-worker/: Dockerfile  features.py  ml_ensemble.py  model.py  pyproject.toml
sniffer/: Dockerfile  config.py  generator.py  pyproject.toml  rules_engine.py  sniffer.py
