[project]
name = "security-backend"
version = "0.1.0"
description = "Security Analytics Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "alembic==1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.3",
    "httpx==0.27.0",
    "ruff==0.4.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "routers*", "schemas*", "services*"]

[tool.uv]
dev-dependencies = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.3",
    "httpx==0.27.0",
    "ruff==0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"